TargetExplorer: More findbugs fixes